--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,7 +25,7 @@
 
     <div id="body-div">
         <div id="logo-div">
-            <img id="logo" src="/assets/images/logo.png" alt="Bee Logo">
+            <img id="logo" src="stingerstories.com/assets/images/logo.png" alt="Bee Logo">
             <img id="logo-text" src="/assets/images/logo-text.png" alt="Stinger Stories Text">
         </div>
 
