--- a/_layouts/submit.html
+++ b/_layouts/submit.html
@@ -36,7 +36,7 @@ span{
     <div id="body-div">
         <div id="logo-div">
             <span>SUBMIT</span>
-            <img id="logo" src="/assets/images/logo.png" alt="Bee Logo">
+            <img id="logo" src="assets/images/logo.png" alt="Bee Logo">
         </div>
 
         <div id="body-text-div">
