--- a/_layouts/weekly.html
+++ b/_layouts/weekly.html
@@ -46,7 +46,7 @@ span{
     <div id="body-div">
         <div id="logo-div">
             <span>WEEKLY</span>
-            <img id="logo" src="/assets/images/logo.png" alt="Stinger Stories Logo">
+            <img id="logo" src="assets/images/logo.png" alt="Stinger Stories Logo">
         </div>
 
         <div id="body-text-div">
