--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,8 +25,8 @@
 
     <div id="body-div">
         <div id="logo-div">
-            <img id="logo" src="assets/images/logo.png" alt="Bee Logo">
-            <img id="logo-text" src="/assets/images/logo-text.png" alt="Stinger Stories Text">
+            <img id="logo" src="assets/images/Logo.png" alt="Bee Logo">
+            <img id="logo-text" src="assets/images/Logo-text.png" alt="Stinger Stories Text">
         </div>
 
         <div id="body-text-div">
