--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -32,7 +32,7 @@ span{
     <div id="body-div">
         <div id="logo-div">
             <span>ABOUT</span>
-            <img id="logo" src="assets/images/logo.png" alt="Bee Logo">
+            <img id="logo" src="assets/images/Logo.png" alt="Bee Logo">
         </div>
 
         <div id="body-text-div">
