--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -45,7 +45,7 @@ span{
 
     <div id="body-div">
         <div id="logo-div">
-            <span>WEEKLY</span>
+            <span> {{ page.title }} </span>
             <img id="logo" src="assets/images/Logo.png" alt="Stinger Stories Logo">
         </div>
 
