--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,7 @@ span{
         </div>
 
         <div id="body-text-div">
+            <p id="author">{{ :page.author }}</p>
             <p id="description"> {{ content }}</p>
         </div>
     </div>
