--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,10 +32,11 @@ span{
     <div id="body-div">
         <div id="logo-div">
             <h1>{{ :page.title }}</h1>
+            <h2 id="author">By {{ :page.author }}</h2>
         </div>
 
         <div id="body-text-div">
-            <p id="author">{{ :page.author }}</p>
+
             <p id="description"> {{ content }}</p>
         </div>
     </div>
