Removed category tags

--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -20,6 +20,12 @@
     padding: 20px;
 }
 
+#logo-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 span{
     font-size: 45;
     font-weight: bold;
