--- a/_includes/css.html
+++ b/_includes/css.html
@@ -83,4 +83,21 @@
         padding: 10px 5px 10px 5px;
     }
 
+    @media (max-width: 1000px){
+        #nav-bar{
+            display:flex;
+            width:100%;
+            flex-direction:column;
+            height: auto;
+            justify-content:space-around;
+        }
+    }
+
+    @media(max-width: 1000px){
+        li a{
+            padding: 0;
+            width:100%
+        }
+    }
+
 </style>
