--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -15,7 +15,7 @@
 
 #body-text-div {
     text-align:center;
-    width: 700px;
+    max-width: 700px;
     text-align: left;
     padding: 20px;
 }
