--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
 
 #body-text-div {
     text-align:center;
-    width: 700px;
+    max-width: 700px;
     border: 1px solid black;
     text-align: left;
     padding: 20px;
