--- a/_includes/css.html
+++ b/_includes/css.html
@@ -27,7 +27,7 @@
         padding-top: 10px;
         padding-bottom: 10px;
         padding-left: 20px;
-        width:30vw;
+        width:400px;
         font-size: 18px;
     }
 
