--- a/_includes/css.html
+++ b/_includes/css.html
@@ -83,6 +83,10 @@
         padding: 10px 5px 10px 5px;
     }
 
+    .post-link{
+        float:right;
+    }
+
     @media (max-width: 1000px){
         #nav-bar{
             display:flex;
