--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -43,6 +43,8 @@ span{
 
     {% include header.html %}
 
+    <title>{{:site.title}}</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
+
     <div id="body-div">
         <div id="logo-div">
             <span> {{ page.title }} </span>
