--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,6 +23,7 @@
 
     {% include header.html %}
 
+    <title>{{:site.title}}</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
     <div id="body-div">
         <div id="logo-div">
             <img id="logo" src="assets/images/Logo.png" alt="Bee Logo">
