--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -29,6 +29,8 @@ span{
 
     {% include header.html %}
 
+    <title>{{:site.title}}</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
+
     <div id="body-div">
         <div id="logo-div">
             <span>ABOUT</span>
