--- a/_layouts/submit.html
+++ b/_layouts/submit.html
@@ -33,6 +33,8 @@ span{
 
     {% include header.html %}
 
+    <title>{{:site.title}}</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
+
     <div id="body-div">
         <div id="logo-div">
             <span>SUBMIT</span>
