--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -37,16 +37,13 @@ span{
         <div id="body-text-div">
 
             <p id="description"> {{ content }}</p>
-            <p>List of stories:</p>
+            <h2>Posts</h2>
             <ul>
-                {% for post in site.posts %}
-                  <div class="story-summary">
-                        {% if post.author == page.author %}
-                            <a class = "post-title" href="{{ post.url }}">{{ post.title }}</a>
-                        {% endif %}
-                  </div>
-                {% endfor %}
-              </ul>
+              {% assign filtered_posts = site.posts | where: 'author', page.name %}
+              {% for post in filtered_posts %}
+                <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+              {% endfor %}
+            </ul>
 
         </div>
         </div>
