--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,10 @@ span{
     <div id="body-div">
         <div id="logo-div">
             <h1>{{ :page.title }}</h1>
-            <h2 id="author">By {{ :page.author }}</h2>
+            {% assign author = site.authors | where: 'name', page.author | first %}
+            {% if author %}
+              By: <a href="{{ author.url }}">{{ author.name }}</a>
+            {% endif %}
         </div>
 
         <div id="body-text-div">
