--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ span{
             <h1>{{ :page.title }}</h1>
             {% assign author = site.authors | where: 'name', page.author | first %}
             {% if author %}
-              By: <a href="{{ author.url }}">{{ author.name }}</a>
+              <h2>By: <a href="{{ author.url }}">{{ author.name }}</a></h2>
             {% endif %}
         </div>
 
