--- a/_includes/css.html
+++ b/_includes/css.html
@@ -87,6 +87,10 @@
         float:right;
     }
 
+    span{
+        font-size:8;
+    }
+
     @media (max-width: 850px){
         #nav-bar{
             display:flex;
