--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header id="header">
     <nav id="nav-bar">
         <ul>
-            <li><a class="nav-link" href="index.html" class=header-links>HOME</a></li>
+            <li><a class="nav-link" href="home.html" class=header-links>HOME</a></li>
             <li><a class="nav-link" href="about.html" class=header-links>ABOUT</a></li>
-            <li><a class="nav-link" href="flash.html" class=header-links>FLASH FICTION</a></li>
+            <li><a class="nav-link" href="index.html" class=header-links>FLASH FICTION</a></li>
             <li><a class="nav-link" href="submit.html" class=header-links>SUBMIT</a></li>
         </ul>
     </nav>
