--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,7 +19,7 @@
     align-items: center;
 }
 
-span{
+h2{
     font-size: 45;
     font-weight: bold;
 }
@@ -33,7 +33,7 @@ span{
 
     <div id="body-div">
         <div id="logo-div">
-            <span>ABOUT</span>
+            <h2>ABOUT</h2>
             <img id="logo" src="assets/images/Logo.png" alt="Bee Logo">
         </div>
 
