--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -26,15 +26,15 @@
     align-items: center;
 }
 
-span{
-    font-size: 45;
-    font-weight: bold;
-}
-
 .story-summary{
     padding: 20px;
     margin: 20px;
     border: 1px solid black;
+}
+
+h2{
+    font-size: 45;
+    font-weight: bold;
 }
 
 </style>
@@ -47,7 +47,7 @@ span{
 
     <div id="body-div">
         <div id="logo-div">
-            <span> {{ page.title }} </span>
+            <h2> {{ page.title }} </h2>
             <img id="logo" src="assets/images/Logo.png" alt="Stinger Stories Logo">
         </div>
 
