--- a/_layouts/submit.html
+++ b/_layouts/submit.html
@@ -23,7 +23,7 @@ p {
     margin: 24px;
 }
 
-span{
+h2{
     font-size: 45;
     font-weight: bold;
 }
@@ -37,7 +37,7 @@ span{
 
     <div id="body-div">
         <div id="logo-div">
-            <span>SUBMIT</span>
+            <h2>SUBMIT</h2>
             <img id="logo" src="assets/images/Logo.png" alt="Bee Logo">
         </div>
 
