--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header id="header">
     <nav id="nav-bar">
         <ul>
-            <li><a class="nav-link" href="stingerstories.com/home.html" class=header-links>HOME</a></li>
-            <li><a class="nav-link" href="stingerstories.com/about.html" class=header-links>ABOUT</a></li>
-            <li><a class="nav-link" href="stingerstories.com/index.html" class=header-links>FLASH FICTION</a></li>
-            <li><a class="nav-link" href="stingerstories.com/submit.html" class=header-links>SUBMIT</a></li>
+            <li><a class="nav-link" href="https://stingerstories.com/home.html" class=header-links>HOME</a></li>
+            <li><a class="nav-link" href="https://stingerstories.com/about.html" class=header-links>ABOUT</a></li>
+            <li><a class="nav-link" href="https://stingerstories.com/index.html" class=header-links>FLASH FICTION</a></li>
+            <li><a class="nav-link" href="https://stingerstories.com/submit.html" class=header-links>SUBMIT</a></li>
         </ul>
     </nav>
 </header>
