--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -48,7 +48,7 @@ h2{
     <div id="body-div">
         <div id="logo-div">
             <h2> {{ page.title }} </h2>
-            <img id="logo" src="assets/images/Logo.png" alt="Stinger Stories Logo">
+            <img id="logo" src="https://stingerstories.com/assets/images/Logo.png" alt="Stinger Stories Logo">
         </div>
 
         <div id="body-text-div">
