--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,18 @@
 }
 </style>
 
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175797984-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175797984-1');
+</script>
+</head>
+
 <body>
 
     {% include header.html %}
