--- a/_includes/css.html
+++ b/_includes/css.html
@@ -98,6 +98,12 @@
         }
     }
 
+    @media (max-width: 850px){
+        nav li {
+            margin-right: 0;
+        }
+    }
+
     @media(max-width: 850px){
         li a{
             padding: 0;
