--- a/_includes/css.html
+++ b/_includes/css.html
@@ -101,6 +101,7 @@
     @media (max-width: 850px){
         nav li {
             margin-right: 0;
+            padding: 0 0 0 0;
         }
     }
 
