--- a/_includes/css.html
+++ b/_includes/css.html
@@ -103,6 +103,14 @@
             margin-right: 0;
             padding: 0 0 0 0;
         }
+
+        #footer-div{
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-left: 20px;
+            width:400px;
+            font-size: 18px;
+        }
     }
 
     @media(max-width: 850px){
