--- a/_includes/css.html
+++ b/_includes/css.html
@@ -108,7 +108,7 @@
             padding-top: 10px;
             padding-bottom: 10px;
             padding-left: 20px;
-            width:400px;
+            width: 100%;
             font-size: 18px;
         }
     }
