--- a/_includes/css.html
+++ b/_includes/css.html
@@ -110,6 +110,10 @@
             padding: 0;
             width:100%
         }
+
+        body{
+            margin:0;
+        }
     }
 
 </style>
