--- a/_includes/css.html
+++ b/_includes/css.html
@@ -91,7 +91,7 @@
     @media (max-width: 850px){
         #nav-bar{
             display:flex;
-            width:100%;
+            width:auto;
             flex-direction:column;
             height: auto;
             justify-content:space-around;
@@ -108,7 +108,7 @@
 
         li a{
             padding: 0;
-            width:100%
+            width:autol
         }
 
         body{
