--- a/_includes/css.html
+++ b/_includes/css.html
@@ -91,7 +91,7 @@
     @media (max-width: 850px){
         #nav-bar{
             display:flex;
-            width:auto;
+            width:100%;
             flex-direction:column;
             height: auto;
             justify-content:space-around;
@@ -108,11 +108,15 @@
 
         li a{
             padding: 0;
-            width:auto;
+            width:100%
         }
 
         body{
-            margin:0;
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            overflow-x: hidden;
         }
     }
 
