--- a/_includes/css.html
+++ b/_includes/css.html
@@ -103,6 +103,10 @@
         }
 
         #footer-div{
+            padding-top: 0;
+            padding-bottom: 0;
+            padding-left: 0;
+            width:auto;
             font-size: 18px;
         }
 
