--- a/_includes/css.html
+++ b/_includes/css.html
@@ -103,9 +103,10 @@
         }
 
         #footer-div{
-            padding-top: 0;
-            padding-bottom: 0;
-            padding-left: 0;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            padding-left: 5px;
+            padding-left: 5px;
             width:auto;
             font-size: 18px;
         }
