--- a/_layouts/submit.html
+++ b/_layouts/submit.html
@@ -27,6 +27,13 @@ h2{
     font-size: 45;
     font-weight: bold;
 }
+
+@media (max-width: 850px){
+    #body-text-div {
+    text-align:center;
+    padding: 5px;
+}
+}
 </style>
 
 <head>
