Fixing margins on mobile

--- a/_includes/css.html
+++ b/_includes/css.html
@@ -123,6 +123,19 @@
             padding: 0px;
             overflow-x: hidden;
         }
+
+        #logo{
+            width:100px;
+            height:100px;
+            padding:10px;
+            display:inline-block;
+        }
+
+        #logo-text {
+            height: 150px;
+            padding:10px;
+            display:inline-block;
+        }
     }
 
 </style>
