--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -37,6 +37,15 @@ h2{
     font-weight: bold;
 }
 
+@media (max-width: 850px){
+
+    .story-summary{
+    padding: 5px;
+    margin: 5px;
+
+}
+}
+
 </style>
 
 <head>
