--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -40,9 +40,12 @@ h2{
 @media (max-width: 850px){
 
     .story-summary{
-    padding: 5px;
-    margin: 5px;
+        padding: 5px;
+        margin: 5px;
+    }
 
+    h2{
+    font-size: 32;
 }
 }
 
