--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,13 @@
     align-content:center;
     justify-content:center;
 }
+
+@media (max-width: 850px){
+    #logo{
+        width:100px;
+        height:100px;
+    }
+}
 </style>
 
 <head>
