--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,11 @@
         width:100px;
         height:100px;
     }
+
+    #logo-text{
+        width:auto;
+        height:100px;
+    }
 }
 </style>
 
