--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -27,7 +27,7 @@
 }
 
 .story-summary{
-    padding: 20px;
+    padding: 20px, 20px, 20px, 20px;
     margin: 20px;
     border: 1px solid black;
 }
@@ -45,8 +45,13 @@ h2{
     }
 
     h2{
-    font-size: 32;
-}
+        font-size: 32;
+    }
+
+    #body-text-div {
+        max-width: 800px;
+        padding: 5px, 5px, 5px, 5px ;
+    }
 }
 
 </style>
