--- a/_includes/css.html
+++ b/_includes/css.html
@@ -136,6 +136,11 @@
             padding:10px;
             display:inline-block;
         }
+
+        #body-div{
+        padding-left:5px;
+        padding-right:5px;
+    }
     }
 
 </style>
