--- a/_includes/css.html
+++ b/_includes/css.html
@@ -28,6 +28,7 @@
         padding-top: 10px;
         padding-bottom: 10px;
         padding-left: 20px;
+        padding-right: 20px;
         width:400px;
         font-size: 18px;
     }
