--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -52,6 +52,12 @@ h2{
         max-width: 800px;
         padding: 5px, 5px, 5px, 5px ;
     }
+
+    .story-summary{
+    padding: 5px, 5px, 5px, 5px ;
+    margin: 5px, 5px, 5px, 5px ;
+    border: 1px solid black;
+}
 }
 
 </style>
