--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -28,7 +28,7 @@
 
 .story-summary{
     padding: 20px, 20px, 20px, 20px;
-    margin: 20px;
+    margin: 20px, 20px, 20px, 20px;
     border: 1px solid black;
 }
 
