--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -37,6 +37,29 @@ h2{
     font-weight: bold;
 }
 
+@media (max-width: 850px){
+
+.story-summary{
+    padding: 5px;
+    margin: 5px;
+}
+
+h2{
+    font-size: 28;
+}
+
+#body-text-div {
+    max-width: 800px;
+    padding: 5px, 5px, 5px, 5px ;
+}
+
+.story-summary{
+    padding: 5px, 5px, 5px, 5px ;
+    margin: 5px, 5px, 5px, 5px ;
+    border: 1px solid black;
+}
+}
+
 </style>
 
 <head>
