--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -16,6 +16,7 @@
 #body-text-div {
     text-align:center;
     max-width: 700px;
+    min-width: 700px;
     text-align: left;
     padding: 20px;
 }
