--- a/_layouts/exerpts.html
+++ b/_layouts/exerpts.html
@@ -16,7 +16,6 @@
 #body-text-div {
     text-align:center;
     max-width: 700px;
-    min-width: 700px;
     text-align: left;
     padding: 20px;
 }
@@ -50,7 +49,7 @@ h2{
 }
 
 #body-text-div {
-    max-width: 800px;
+    max-width: auto;
     padding: 5px, 5px, 5px, 5px ;
 }
 
