--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,6 +42,8 @@
   gtag('config', 'UA-175836006-1');
 </script>
 
+<meta name="Description" content="Stinger Stories is a digital literary magazine dedicated to short works fantastic and unusual fiction.">
+
 </head>
 
 <body>
