Added meta description tags

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,6 +37,8 @@ h2{
 </script>
 
 </script>
+
+<meta name="Description" content="Our magazine focuses stories with 300 or fewer words. We sometimes make an exception for longer works or poems that are well written and thematically relevant.">
 </head>
 
 <body>
