--- a/_layouts/submit.html
+++ b/_layouts/submit.html
@@ -47,6 +47,7 @@ h2{
   gtag('config', 'UA-175836006-1');
 </script>
 
+<meta name="Description" content="Most of our published work is in the science fiction or fantasy genres. We will consider any work that is well written and unusual/experimental in nature.">
 </head>
 
 <body>
