--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     max-width: 700px;
     border: 1px solid black;
     text-align: left;
-    padding: 20px;
+    /*padding: 20px;*/
 }
 
 #logo-div {
