Fix list padding on all pages

--- a/_includes/css.html
+++ b/_includes/css.html
@@ -89,6 +89,11 @@
         float:right;
     }
 
+    /*Overwrites some code that Jekyll inserts that makes lists padded on the left.*/
+    ul {
+    padding-inline-start: 0;
+    }
+
     @media (max-width: 850px){
         #nav-bar{
             display:flex;
