--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@
   gtag('config', 'UA-175836006-1');
 </script>
 
-<meta name="Description" content="Stinger Stories is a digital literary magazine dedicated to short works fantastic and unusual fiction.">
+<meta name="Description" content="Stinger Stories is a digital literary magazine dedicated to flash fiction in the fantasy and scifi genres.">
 
 </head>
 
@@ -53,7 +53,7 @@
     <title>{{:site.title}}</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
     <div id="body-div">
         <div id="logo-div">
-            <img id="logo" src="assets/images/Logo.png" alt="Bee Logo">
+            <img id="logo" src="assets/images/Logo.png" alt="Stinger Stories Logo">
             <img id="logo-text" src="assets/images/Logo-text.png" alt="Stinger Stories Text">
         </div>
 
